Correct control flow stack generation for ELSIF clause